<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Food is Right</string>
    <string name="game_title">Pick the lower calorie item!</string>
    <string name="action_settings">Pick your category!</string>
    <string name="legumes">Legumes</string>
    <string name="snacks">Snacks</string>
    <string name="beverages">Beverages</string>
    <string name="fastfood">Fast Food</string>
    <string name="baked">Baked Foods</string>
    <string name="splash_title">The Food is Right</string>
    <string name="credits">Created by: Vincent Chan,<br></br> Yves Chan,<br></br> Ha Nguyen</string>

</resources>
