<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"

        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/legume_select"
        android:title="@string/legumes"

        android:orderInCategory="200"
        app:showAsAction="never" />

    <item android:id="@+id/snacks_select"
        android:title="@string/snacks"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/baked_select"
        android:title="@string/baked"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/beverages_select"
        android:title="@string/beverages"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/fastFoods_select"
        android:title="@string/fastFoods"
        android:orderInCategory="300"
        app:showAsAction="never" />

</menu>
